crates/plotnik-lib/tests/02-parser/recovery_unexpected/garbage_inside_alternation.txt
[(a) ^^^ (b)]
==== diagnostics ====
error: unexpected token
 --> query.ptk:1:6
  |
1 | [(a) ^^^ (b)]
  |      ^^^
  |
help: expected a branch, or `]` to close
